--- a/zprefix-blog-server/package.json
+++ b/zprefix-blog-server/package.json
@@ -1,24 +1,21 @@
 {
   "name": "zprefix-blog-server",
-  "version": "1.0.0",
-  "description": "Server for a basic CRUD blog",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r dotenv/config ./bin/www dotenv_config_path=../.env.production.local",
+    "start-dev": "nodemon -r dotenv/config ./bin/www dotenv_config_path=../.env.development.local"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/ananaso/zprefix-blog.git"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   },
-  "keywords": [
-    "Z-Prefix",
-    "SupraCoders",
-    "USSF"
-  ],
-  "author": "Alden Davidson",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/ananaso/zprefix-blog/issues"
-  },
-  "homepage": "https://github.com/ananaso/zprefix-blog#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
