--- a/zprefix-blog-server/package.json
+++ b/zprefix-blog-server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "knex migrate:latest && knex seed:run && node ./bin/www",
-    "start-dev": "knex migrate:rollback && knex migrate:latest && knex seed:run && nodemon ./bin/www"
+    "start-dev": "knex migrate:rollback --all && knex migrate:latest && knex seed:run && nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
