--- a/zprefix-blog-server/package.json
+++ b/zprefix-blog-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "knex migrate:latest && knex seed:run && node ./bin/www",
+    "start": "node ./bin/www",
     "start-dev": "knex migrate:rollback --all && knex migrate:latest && knex seed:run && nodemon ./bin/www"
   },
   "dependencies": {
